--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,13 +6,9 @@ window_padding_width 1
 cursor none
 cursor_blink_interval 0
 
-font_size 12.0
-disable_ligatures never
+font_size 11.0
+disable_ligatures always
 font_family      JetBrainsMono Nerd Font
-bold_font        JetBrainsMono NF Bold
-italic_font      JetBrainsMono NF Italic
-bold_italic_font JetBrainsMono NF Bold Italic
-
-map ctrl+shift+plus change_font_size all +1.0
-map ctrl+shift+minus change_font_size all -2.0
-map ctrl+shift+backspace change_font_size all 0
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
