--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -2,14 +2,18 @@ import = ["~/.config/alacritty/themes/tokyonight.toml"]
 
 [env]
 WINIT_X11_SCALE_FACTOR = "1.0"
+TERM = "xterm-256color"
 
 [window]
 dynamic_padding = true
 decorations = "None"
 opacity = 0.8
+startup_mode = "Maximized"
 
 [font]
 normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
 bold = { style = "Bold" }
 italic = { style = "Italic" }
 bold_italic = { style = "Bold Italic" }
+size = 11
+# builtin_box_drawing = false
