--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -6,7 +6,8 @@ bind C-a send-prefix
 set-window-option -g mode-keys vi
 set -s set-clipboard on
 bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -i -selection clipboard"
+bind -T copy-mode-vi y send -X copy-pipe "xclip -i -selection clipboard"
+bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection-no-clear "xclip -i -selection clipboard"
 
 # Auto-renumber windows on closing pane
 set-option -g renumber-windows on
@@ -28,7 +29,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color*:Tc"
