--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -32,7 +32,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 
 # Enable tranparent
-exec_always --no-startup-id picom -b
+exec_always --no-startup-id picom --backend glx -b
 
 # Set backgroud
 # exec_always nitrogen --restore
@@ -150,13 +150,11 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 bindsym $mod+F1 exec i3-sensible-terminal
 bindsym $mod+F2 exec brave-browser
 bindsym $mod+F3 exec google-chrome
-bindsym $mod+F4 exec spotify
 
 # assign app to chosen workspace
 assign [class="Xfce4-terminal"] $ws1
 assign [class="Brave-browser"] $ws2
 assign [class="Google-chrome"] $ws3
-for_window [class="Spotify"] move to workspace $ws4
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -164,6 +162,16 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+
+# Resize window using Vim keys with Alt
+bindsym $mod+Mod1+h resize shrink width 5 px or 5 ppt
+bindsym $mod+Mod1+l resize grow width 5 px or 5 ppt
+bindsym $mod+Mod1+k resize shrink height 5 px or 5 ppt
+bindsym $mod+Mod1+j resize grow height 5 px or 5 ppt
+bindsym $mod+Mod1+Left resize shrink width 5 px or 5 ppt
+bindsym $mod+Mod1+Right resize grow width 5 px or 5 ppt
+bindsym $mod+Mod1+Up resize shrink height 5 px or 5 ppt
+bindsym $mod+Mod1+Down resize grow height 5 px or 5 ppt
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
