--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -152,9 +152,11 @@ bindsym $mod+F2 exec brave-browser
 bindsym $mod+F3 exec google-chrome
 
 # assign app to chosen workspace
-assign [class="Xfce4-terminal"] $ws1
-assign [class="Brave-browser"] $ws2
-assign [class="Google-chrome"] $ws3
+# assign [class="Xfce4-terminal"] $ws1
+# assign [class="Brave-browser"] $ws2
+# assign [class="Google-chrome"] $ws3
+
+for_window [window_role="pop-up"] floating enable
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -173,41 +175,36 @@ bindsym $mod+Mod1+Right resize grow width 5 px or 5 ppt
 bindsym $mod+Mod1+Up resize shrink height 5 px or 5 ppt
 bindsym $mod+Mod1+Down resize grow height 5 px or 5 ppt
 
-# resize window (you can also use the mouse for that)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
+# Gruvbox Dark Palette
+set $bg         #282828
+set $fg         #ebdbb2
+set $black      #1d2021
+set $red        #cc241d
+set $green      #98971a
+set $yellow     #d79921
+set $blue       #458588
+set $purple     #b16286
+set $aqua       #689d6a
+set $gray       #a89984
+set $orange     #d65d0e
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+# Class, border, background, text, indicator
+client.focused          $blue     $blue     $fg       $orange
+client.focused_inactive $black    $black    $gray     $black
+client.unfocused        $black    $black    $gray     $black
+client.urgent           $red      $red      $fg       $red
+client.placeholder      $black    $black    $fg       $black
 
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+client.background       $bg
 
-        # back to normal: Enter or Escape or $mod+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
-}
-
-bindsym $mod+r mode "resize"
-
-# class                 border  bground text    indicator child_border
-client.focused          #83CAFA #51A2DA #FFFFFF #83CAFA   #51A2DA
-client.focused_inactive #8C8C8C #4C4C4C #FFFFFF #4C4C4C   #8C8C8C
-client.unfocused        #4C4C4C #222222 #888888 #292D2E   #222222
-client.urgent           #EC69A0 #DB3279 #FFFFFF #DB3279   #DB3279
-client.placeholder      #000000 #0C0C0C #FFFFFF #000000   #0C0C0C
-
-client.background       #FFFFFF
+# # class                 border  bground text    indicator child_border
+# client.focused          #83CAFA #51A2DA #FFFFFF #83CAFA   #51A2DA
+# client.focused_inactive #8C8C8C #4C4C4C #FFFFFF #4C4C4C   #8C8C8C
+# client.unfocused        #4C4C4C #222222 #888888 #292D2E   #222222
+# client.urgent           #EC69A0 #DB3279 #FFFFFF #DB3279   #DB3279
+# client.placeholder      #000000 #0C0C0C #FFFFFF #000000   #0C0C0C
+#
+# client.background       #FFFFFF
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -217,14 +214,26 @@ bar {
         font pango:JetBrainsMono Nerd Font, Font Awesome 6 Free 10
 
         colors {
-            background #282828
-            statusline #ebdbb2
+            background $bg
+            statusline $fg
+            separator  $gray
 
-            focused_workspace  #4c7899 #458588 #ebdbb2
-            active_workspace   #333333 #98971a #ebdbb2
-            urgent_workspace   #2f343a #cc241d #ebdbb2
-            binding_mode       #2f343a #cc241d #ebdbb2
+            focused_workspace  $blue $blue $fg
+            active_workspace   $gray $gray $fg
+            inactive_workspace $black $black $gray
+            urgent_workspace   $red $red $fg
+            binding_mode       $yellow $yellow $bg
         }
+
+        # colors {
+        #     background #282828
+        #     statusline #ebdbb2
+        #
+        #     focused_workspace  #4c7899 #458588 #ebdbb2
+        #     active_workspace   #4c7899 #98971a #ebdbb2
+        #     urgent_workspace   #2f343a #cc241d #ebdbb2
+        #     binding_mode       #2f343a #cc241d #ebdbb2
+        # }
 }
 
 set $mode_system System (l) lock, (e) logout, (r) reboot, (Shift+s) shutdown
